# welog_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  coverage.out
.github/workflows/: ci.yml
src/: app.rs  axum_middleware.rs  axum_middleware_impl.rs  config.rs  envkey.rs  generalkey.rs  grpc.rs  grpc_impl.rs  lib.rs  logger.rs  main.rs  model.rs  util.rs
src/tests/: mod.rs
tests/: axum_extra.rs  config.rs  grpc_extra.rs  logger_channels.rs  logger_elastic.rs  logger_elastic_no_auth.rs  logger_fallback.rs  logger_missing_elastic.rs  logger_queue_invalid.rs  logger_queue_zero.rs  main_coverage.rs  mod.rs  util_extra.rs
