[package]
name = "welog_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
bytes = "1"
tower = "0.5"

serde_json = "1"

uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde", "clock"] }
whoami = "1.5"
base64 = "0.22"

# HTTP client sink ke Elasticsearch (blocking, dipakai di thread worker)
ureq = { version = "3", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
tempfile = "3"
