[package]
name = "welog_rs"
version = "1.0.1"
edition = "2024"
description = "Structured logging with Elasticsearch sink and file fallback"
license = "MIT"
repository = "https://github.com/christiandoxa/welog_rs"
readme = "README.md"
keywords = ["logging", "axum", "tonic", "grpc", "elasticsearch"]

[dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
bytes = "1"
tower = "0.5"
http = "1"

serde_json = "1"
serde = { version = "1", features = ["derive"] }

uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde", "clock"] }
whoami = "1.5"
base64 = "0.22"

# gRPC support (tonic server helpers)
tonic = { version = "0.14", features = ["transport"] }

# HTTP client sink ke Elasticsearch (blocking, dipakai di thread worker)
ureq = { version = "3", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
tempfile = "3"
